[gd_scene load_steps=13 format=3 uid="uid://x0lreijkwmjp"]

[ext_resource type="Script" uid="uid://nl86bj6ee0c6" path="res://scripts/card_manager.gd" id="1_glv2v"]
[ext_resource type="Script" uid="uid://ji3apbbf1wk" path="res://scripts/player_hand.gd" id="3_cm0pq"]
[ext_resource type="PackedScene" uid="uid://desoeij7rhvhu" path="res://scenes/opponent_card_slot.tscn" id="3_nxtc6"]
[ext_resource type="PackedScene" uid="uid://bsuuljgrc5evc" path="res://scenes/card_slot.tscn" id="3_r0du0"]
[ext_resource type="Texture2D" uid="uid://vl76mnodwtfv" path="res://Assets/Textures/Cards/card_Back.png" id="4_cm0pq"]
[ext_resource type="Script" uid="uid://c3p4igxg6jwrm" path="res://scripts/player_deck.gd" id="4_fos0i"]
[ext_resource type="Script" uid="uid://vtlx5pl23ejt" path="res://scripts/opponent_hand.gd" id="5_q8u5g"]
[ext_resource type="Script" uid="uid://b2wavb5tjxs1m" path="res://scripts/input_manager.gd" id="6_3dxm6"]
[ext_resource type="Script" uid="uid://bvwyqdy58i6l3" path="res://scripts/status.gd" id="6_wp0k4"]
[ext_resource type="Script" uid="uid://cx76sr656x5on" path="res://scripts/battle_manager.gd" id="8_jlsqs"]
[ext_resource type="Script" uid="uid://dc50vcsfm3xtn" path="res://scripts/opponent_deck.gd" id="8_lhr70"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_r0du0"]
size = Vector2(128, 176)

[node name="Main" type="Node2D"]
z_index = -3

[node name="CardManager" type="Node2D" parent="."]
script = ExtResource("1_glv2v")

[node name="CardSlots" type="Node2D" parent="."]

[node name="CardSlot" parent="CardSlots" instance=ExtResource("3_r0du0")]
z_index = 0
position = Vector2(790, 660)

[node name="CardSlot2" parent="CardSlots" instance=ExtResource("3_r0du0")]
z_index = 0
position = Vector2(960, 660)

[node name="CardSlot3" parent="CardSlots" instance=ExtResource("3_r0du0")]
z_index = 0
position = Vector2(1126, 660)

[node name="OpponentCardSlot" parent="CardSlots" instance=ExtResource("3_nxtc6")]
position = Vector2(790, 300)

[node name="OpponentCardSlot2" parent="CardSlots" instance=ExtResource("3_nxtc6")]
position = Vector2(960, 300)

[node name="OpponentCardSlot3" parent="CardSlots" instance=ExtResource("3_nxtc6")]
position = Vector2(1126, 300)

[node name="PlayerHand" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("3_cm0pq")

[node name="OpponentHand" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("5_q8u5g")

[node name="PlayerHealth" type="RichTextLabel" parent="."]
offset_left = 81.0
offset_top = 647.0
offset_right = 281.0
offset_bottom = 749.0
theme_override_font_sizes/normal_font_size = 64
text = "0"

[node name="OpponentHealth" type="RichTextLabel" parent="."]
offset_left = 91.0
offset_top = 189.0
offset_right = 280.0
offset_bottom = 291.0
theme_override_font_sizes/normal_font_size = 64
text = "0"

[node name="Player" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_wp0k4")

[node name="Opponent" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_wp0k4")

[node name="PlayerDeck" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(150, 900)
script = ExtResource("4_fos0i")

[node name="Sprite2D" type="Sprite2D" parent="PlayerDeck"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("4_cm0pq")

[node name="Area2D" type="Area2D" parent="PlayerDeck"]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDeck/Area2D"]
shape = SubResource("RectangleShape2D_r0du0")

[node name="RichTextLabel" type="RichTextLabel" parent="PlayerDeck"]
z_index = -2
offset_left = -65.0
offset_top = -131.0
offset_right = 64.0
offset_bottom = -99.0
scale = Vector2(2, 2)
text = "0"

[node name="OpponentDeck" type="Node2D" parent="."]
unique_name_in_owner = true
position = Vector2(1756, 132)
script = ExtResource("8_lhr70")

[node name="Sprite2D" type="Sprite2D" parent="OpponentDeck"]
texture_filter = 1
scale = Vector2(2, 2)
texture = ExtResource("4_cm0pq")

[node name="RichTextLabel" type="RichTextLabel" parent="OpponentDeck"]
z_index = -2
offset_left = 1699.0
offset_top = 3.0
offset_right = 1828.0
offset_bottom = 35.0
scale = Vector2(2, 2)
text = "0"

[node name="InputManager" type="Node2D" parent="."]
unique_name_in_owner = true
script = ExtResource("6_3dxm6")

[node name="OpponentCardPoint" type="Marker2D" parent="."]
position = Vector2(1360, 460)

[node name="PlayerCardPoint" type="Marker2D" parent="."]
position = Vector2(560, 460)

[node name="EndTurnButton" type="Button" parent="."]
offset_left = 1419.0
offset_top = 459.0
offset_right = 1509.0
offset_bottom = 490.0
scale = Vector2(2.5, 2.5)
text = "END TURN"

[node name="BattleManager" type="Node" parent="."]
script = ExtResource("8_jlsqs")

[node name="BattleTimer" type="Timer" parent="."]
unique_name_in_owner = true

[connection signal="pressed" from="EndTurnButton" to="BattleManager" method="_on_end_turn_button_pressed"]
